--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,26 @@
-body{
+body {
   font-family: "Poppins", sans-serif;
   background: #272044;
 }
 
-.container{
+.container {
   max-width: 1400px;
   margin: 0 auto;
 }
 
-header{
-  background-image:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),url('../images/sal.jpg');
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 2fr 2fr;
+}
+
+section {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../images/sal.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   color: white;
@@ -24,7 +35,7 @@ header h1 {
   margin: 30px 0;
 }
 
-header h2{
+header h2 {
   font-weight: 400;
   font-size: 40px;
   line-height: 1.5;
@@ -32,7 +43,7 @@ header h2{
   margin: 0;
 }
 
-header h3{
+header h3 {
   font-weight: 900;
   font-size: 24px;
   line-height: 1.5;
@@ -55,20 +66,61 @@ header a {
   background: white;
 }
 
-@media (max-width: 900px){
-  header{
+footer {
+  color: white;
+  background-image: linear-gradient(
+      rgba(39, 32, 68, 0.9),
+      rgba(39, 32, 68, 0.9)
+    ),
+    url("../images/Sal-Cape-Verde.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 100px 0;
+}
+
+footer h3 {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 30px;
+}
+
+footer p {
+  font-weight: 400;
+  font-size: 16px;
+  opacity: 0.7;
+  margin-right: 20px;
+  line-height: 24px;
+}
+
+footer ul {
+  padding: 0;
+}
+
+footer li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+footer a {
+  color: white;
+  opacity: 0.7;
+}
+
+@media (max-width: 960px) {
+  header {
     padding: 60px 0;
   }
 
-  header h1{
+  header h1 {
     font-size: 48px;
   }
 
-  header h2{
+  header h2 {
     font-size: 20px;
   }
 
-  header h3{
+  header h3 {
     font-size: 12px;
   }
 }
